--- a/Project.css
+++ b/Project.css
@@ -1,12 +1,11 @@
 html, body {
 	width: 100%;
 	height: 100%;
-	margin: auto;
+	margin: 0;
 	padding: 0;
 	overflow: hidden;
-	background-color: #101010;
-	font-family: '8BITWONDERNominal';
-	font-size: 0;
+	background-color: black;
+	background-size: 100%;
 }
 input {
 	opacity: 0;
@@ -15,4 +14,13 @@ input {
 	top: 0%;
 	width: 100%;
 	height: 100%;
+}
+img{
+	position: absolute;
+	margin: auto; 
+	width: 150px;
+	height: 150px;
+	right:0;
+	left: 0;
+	bottom:0; 
 }
