--- a/Project.css
+++ b/Project.css
@@ -24,3 +24,38 @@ img{
 	left: 0;
 	bottom:0; 
 }
+#box:hover{
+	width: 20%;
+	height: 200px;
+	border: 3px solid;
+	border-color: white;
+	margin: auto;
+	bottom: 0;
+	left: 0;
+	position: absolute;
+	color: white;
+	font-family: 'Press Start 2P';
+	font-size: 10px;
+	padding: 15px;
+	line-height: 15px;
+	transition: 3s;
+}
+#box{
+	width: 10%;
+	height: 20px;
+	border: 3px solid;
+	border-color: white;
+	bottom: 0;
+	left: 0;
+	position: absolute;
+	font-family: 'Press Start 2P';
+	font-size: 10px;
+	line-height: 10px;
+	color: white;
+	z-index:2;
+	transition: 3s;
+	padding: 10px;
+}
+p{
+	text-align: center;
+}
