--- a/Project.css
+++ b/Project.css
@@ -16,6 +16,7 @@ input {
 	height: 100%;
 }
 img{
+	display: none;
 	position: absolute;
 	margin: auto; 
 	width: 150px;
@@ -32,6 +33,7 @@ img{
 	margin: auto;
 	bottom: 0;
 	left: 0;
+	right: 0;
 	position: absolute;
 	color: white;
 	font-family: 'Press Start 2P';
@@ -45,8 +47,10 @@ img{
 	height: 20px;
 	border: 3px solid;
 	border-color: white;
+	margin: auto;
 	bottom: 0;
 	left: 0;
+	right: 0;
 	position: absolute;
 	font-family: 'Press Start 2P';
 	font-size: 10px;
@@ -55,7 +59,6 @@ img{
 	z-index:2;
 	transition: 3s;
 	padding: 10px;
-	opacity: 70%;
 }
 p{
 	text-align: center;
