--- a/Project.css
+++ b/Project.css
@@ -30,6 +30,7 @@ img{
 	height: 200px;
 	border: 3px solid;
 	border-color: white;
+	background-color: black;
 	margin: auto;
 	bottom: 0;
 	left: 0;
@@ -40,6 +41,11 @@ img{
 	font-size: 10px;
 	padding: 15px;
 	line-height: 15px;
+	transition: 3s;
+}
+#box:hover p{
+	font-size: 14px;
+	color:yellow;
 	transition: 3s;
 }
 #box{
@@ -61,5 +67,11 @@ img{
 	padding: 10px;
 }
 p{
+	text-align: center;
+
+}
+.press{
+	color: yellowgreen;
+	line-height: 3px;
 	text-align: center;
 }
